--- a/src/Meguna.css
+++ b/src/Meguna.css
@@ -486,135 +486,7 @@
     /* Son karede animasyonu sabitlemek için */
 }
 
-@keyframes meguna-blue {
-    0% {
-        background-position: -77px -1197px;
-        width: 44px;
-        height: 104px;
-    }
 
-    10% {
-        background-position: -150px -1217px;
-        width: 72px;
-        height: 84px;
-    }
-
-    20% {
-        background-position: -239px -1217px;
-        width: 58px;
-        height: 84px;
-    }
-
-    30% {
-        background-position: -317px -1217px;
-        width: 58px;
-        height: 84px;
-    }
-
-    40% {
-        background-position: -392px -1217px;
-        width: 76px;
-        height: 84px;
-    }
-
-    50% {
-        background-position: -477px -1217px;
-        width: 84px;
-        height: 84px;
-    }
-
-    60% {
-        background-position: -565px -1217px;
-        width: 90px;
-        height: 84px;
-    }
-
-    70% {
-        background-position: -667px -1213px;
-        width: 92px;
-        height: 88px;
-    }
-
-    80% {
-        background-position: -790px -1209px;
-        width: 78px;
-        height: 92px;
-    }
-
-    90% {
-        background-position: -892px -1209px;
-        width: 78px;
-        height: 92px;
-    }
-
-    100% {
-        background-position: -77px -1197px;
-        width: 44px;
-        height: 104px;
-    }
-}
-
-.blue {
-    background: url(./Assets/meguna.png) no-repeat;
-}
-
-@keyframes blueEffect {
-    0% {
-        background-position: -1210px -1147px;
-        width: 125px;
-        height: 111px;
-    }
-
-    33% {
-        background-position: -1085px -1147px;
-        width: 110px;
-        height: 114px;
-    }
-
-    66% {
-        background-position: -973px -1161px;
-        width: 98px;
-        height: 88px;
-    }
-
-    100% {
-        background-position: -1210px -1147px;
-        width: 125px;
-        height: 111px;
-    }
-}
-
-@keyframes blue-itself {
-
-    /* top:  80 62 84 */
-    /* left: 74 62 76  */
-    0% {
-        background-position: -65px -1327px;
-        width: 218px;
-        height: 184px;
-    }
-
-    33% {
-        background-position: -289px -1349px;
-        width: 200px;
-        height: 198px;
-        translate: 12px 18px;
-    }
-
-    66% {
-        background-position: -545px -1343px;
-        width: 216px;
-        height: 204px;
-        translate: -2px -2px;
-    }
-
-    100% {
-        background-position: -65px -1327px;
-        width: 218px;
-        height: 184px;
-        translate: 0px 0px;
-    }
-}
 
 @keyframes meguna-red-up {
     0% {
